# recall-proxy

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
config/examples/: multi-engine-orchestration.yaml  multi-memory-wiring.yaml  simple-single-engine.yaml  sqlite-provider.yaml
crates/config/: Cargo.toml
crates/config/src/: context_pipeline.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: README.md  contracts.rs  engine.rs  events.rs  gateway_types.rs  lib.rs  memory.rs
crates/core/src/context/: mod.rs
crates/core/src/error/: mod.rs
crates/core/src/events/: README.md
crates/core/src/memory/: README.md  mod.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lib.rs  main.rs  orchestrator.rs
crates/gateway/src/context_assembly/: mod.rs
crates/gateway/src/request/: mod.rs
crates/gateway/src/response/: README.md  chunk_capture.rs  finalization.rs  handoff.rs  mod.rs
crates/hindsight-worker/: Cargo.toml
crates/hindsight-worker/src/: README.md  lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: engine.rs  handlers.rs  jsonrpc.rs  lib.rs  main.rs  server.rs  state.rs
crates/mcp-server/src/engines/: in_memory_engine.rs  mod.rs
crates/mcp-server/tests/: integration.rs
crates/memory/: Cargo.toml
crates/memory/src/: engine.rs  factory.rs  lib.rs
crates/memory/src/engines/: episodic.rs  mod.rs  semantic.rs  structural.rs  temporal.rs
crates/memory/tests/: integration.rs
docs/architecture/: configuration.md  hindsight-flow.md  multi-memory-flow.md  multi-memory-model.md  mvp-flow.md  repository-layout.md  request-flow.md
examples/e2e/: README.md  docker-compose.yml  promptfooconfig.yaml
src/: DEPRECATED.md  lib.rs
src/domain/: mod.rs  types.rs
src/engines/: contracts.rs  mod.rs
src/gateway/: mod.rs  orchestrator.rs
