[package]
name = "recall-proxy-hindsight-worker"
edition = "2021"
version = "0.1.0"
license = "MIT"

[dependencies]
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
recall-proxy-core = { path = "../core" }
recall-proxy-config = { path = "../config" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
